--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,24 @@
     "prettier",
     "plugin:tailwindcss/recommended"
   ],
-  "plugins": ["simple-import-sort", "prettier"],
+  "plugins": ["simple-import-sort", "prettier", "unused-imports"],
   "rules": {
     "simple-import-sort/imports": "error",
     "prettier/prettier": [
       "error",
       {
         "endOfLine": "auto"
+      }
+    ],
+    "no-unused-vars": "off", // or "@typescript-eslint/no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
       }
     ]
   }
