--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/lib-dynamodb": "^3.614.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
