--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/dynamodb-adapter": "^2.4.1",
     "@aws-sdk/client-dynamodb": "^3.614.0",
     "@aws-sdk/lib-dynamodb": "^3.614.0",
+    "iron-session": "^8.0.2",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
